Adapt cont sub fill height to 100vh - (header + footer), giving fixed heights to header and footer, for better visibility of the cont sub fill, otherwise the reservation form was partially hidden behind header and footer

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,6 +26,7 @@ h1 {
 header {
   margin: 0;
   padding: 0;
+  height: 60px;
   background-color: #f0f8ff;
   opacity: 0.85;
   color: cadetblue;
@@ -33,6 +34,7 @@ header {
 
 footer {
   margin-top: auto;
+  height: 40px;
   background-color: aliceblue;
   opacity: 0.85;
   color: cadetblue;
@@ -179,6 +181,7 @@ a {
   background-color: cadetblue;
   width: 100%;
 }
+
 .btn-success,.button {
   display: flex;
   align-items: center;
