--- a/static/css/subpages.css
+++ b/static/css/subpages.css
@@ -1,6 +1,5 @@
-html,
 body {
-  height: 100%;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
 }
@@ -18,6 +17,7 @@ body {
 }
 
 .cont_sub_fill {
+  max-height: calc(100vh - 100px);
   background-color: cadetblue;
   padding: 30px;
   max-width: 650px;
